--- a/purchase_line_procurement_group/views/purchase.xml
+++ b/purchase_line_procurement_group/views/purchase.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="purchase_order_form_inherit" model="ir.ui.view">
+    <record id="purchase_order_form" model="ir.ui.view">
         <field name="name">purchase.order.form.inherit</field>
         <field name="model">purchase.order</field>
         <field name="inherit_id" ref="purchase.purchase_order_form" />
         <field name="arch" type="xml">
-            <xpath expr="//notebook//field[@name='order_line']/tree/field[@name='move_dest_ids']" position="after">
+            <xpath expr="//notebook//field[@name='order_line']/tree/field[@name='date_planned']" position="after">
                 <field name="procurement_group_id" group_id="base.group_no_one" />
             </xpath>
             <xpath expr="//notebook//field[@name='order_line']/form//field[@name='date_planned']" position="after">
